[gd_scene load_steps=10 format=3 uid="uid://jot0khtaj6dd"]

[ext_resource type="Texture2D" uid="uid://bt74lhiqtdnqp" path="res://assets/textures/Bubbles/Bubble-ColorOnly.png" id="1_24ad0"]
[ext_resource type="Script" path="res://bubble.gd" id="1_ram5s"]
[ext_resource type="Texture2D" uid="uid://bkg4jga733mw7" path="res://assets/textures/Bubbles/Bubble-ShineOnly.png" id="2_jivdc"]
[ext_resource type="AudioStream" uid="uid://b7e1gcrc0ayax" path="res://assets/sounds/Bubble pop (echo).wav" id="4_8fmec"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vmupy"]
radius = 50.0

[sub_resource type="Animation" id="Animation_a1wis"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/BubbleShine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.720116, 1, 0.997473, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textures/BubbleColorPop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textures/BubbleColorPop2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Textures/BubbleColorPop2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.02, 0.02)]
}

[sub_resource type="Animation" id="Animation_p8mip"]
resource_name = "pop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textures/BubbleShine:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.720116, 1, 0.997473, 1), Color(0.721569, 1, 0.996078, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Textures/BubbleColorPop:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Textures/BubbleColorPop2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Textures/BubbleColorPop2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.02, 0.02), Vector2(0.13, 0.13)]
}

[sub_resource type="Animation" id="Animation_tcq1d"]
resource_name = "wobble"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Textures:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.933033),
"update": 0,
"values": [Vector2(2.6, 2.4), Vector2(2.4, 2.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Textures:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_352x6"]
_data = {
"RESET": SubResource("Animation_a1wis"),
"pop": SubResource("Animation_p8mip"),
"wobble": SubResource("Animation_tcq1d")
}

[node name="BubbleCollision" type="CollisionShape2D"]
shape = SubResource("CircleShape2D_vmupy")
script = ExtResource("1_ram5s")
color = Color(0.65098, 0.611765, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_352x6")
}

[node name="Textures" type="Node2D" parent="."]
scale = Vector2(2.5, 2.5)

[node name="BubbleColor" type="Sprite2D" parent="Textures"]
unique_name_in_owner = true
modulate = Color(0.65098, 0.611765, 1, 1)
scale = Vector2(0.08, 0.08)
texture = ExtResource("1_24ad0")

[node name="BubbleShine" type="Sprite2D" parent="Textures"]
unique_name_in_owner = true
modulate = Color(0.720116, 1, 0.997473, 1)
scale = Vector2(0.08, 0.08)
texture = ExtResource("2_jivdc")

[node name="BubbleColorPop" type="Sprite2D" parent="Textures"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.08, 0.08)
texture = ExtResource("1_24ad0")

[node name="BubbleColorPop2" type="Sprite2D" parent="Textures"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.02, 0.02)
texture = ExtResource("1_24ad0")

[node name="AudioPlayer_Pop" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
stream = ExtResource("4_8fmec")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
